- Updated pom.xml project Dependencies were updated to their latest (Avi)
- Added log messages to PageFetcher These logs were taken from: ind9/crawler4j 153eb752bef5a57bd39016807423683ab22f3913 (Avi)
- Issue 282: Add CHANGES.TXT with the changelog to the root

BugFixes
- Issue 284: Cathing any exception and hidding the log. Upgraded logging in webcrawler Clarified a little statuscode 1005 (Avi)
- Issue 251: Fix a typo, Fix a typo in line #92. 'cuncurrent' -> 'concurrent' (Avi)
- Issue 279: TikaException is thrown while crawling several PDFs in a row The problem was the wrong re-use of the metadata (Avi)
- Issue 139: A URL with a backslash was rejected (Avi)
- Issue 231: Memory leakage in crawler4j caused by database environment, Closing the environment solves the leak. (Avi)

Version 3.5 (March 2013)
- Fixed issues #184, #169, #136, #156, #191, #192, #127 (Yasser)
- Fixed  issue #101  in normalizing Urls (Yasser)
- Fixed  issue #143 : Anchor text is now provided correctly (Yasser)
- Access to response headers is now provided as a field in Page object (Yasser)
- Added support for handling content fetch and parsing issues. (Yasser)
- Added meta refresh and location to outgoing links (Yasser)
- Upgraded to Java 7 (Yasser)
- Updated dependencies to their latest versions (Yasser)

Version 3.3
- Updated URL canonicalizer based on RFC1808 and fixed bugs (Yasser)
- Added Parent Url and Path to WebURL (Yasser)
- Added support for domain and sub-domain detection. (Yasser)
- Added support for handling http status codes for fetched pages (Yasser)

Version 3.1
- Fixed thread-safety bug in page fetcher. (Yasser)
- Improved URL canonicalizer. (Yasser)

Version 3.0
- Major re-design of crawler4j to add many new features and make it extendable. (Yasser)
- Multiple distinct crawlers can now run concurrently. (Yasser)
- Maven support (Yasser)
- Automatic detection of character encoding of pages to support crawling of non UTF-8 pages. (Yasser)